<resources>
    <string name="app_name">Lesson</string>
    <string name="about_title">Searchs</string>
    <string name="slide_holder_delete">删除</string>
    <string name="slide_holder_top">置顶</string>
    <string name="Gally">Gally</string>
    <string name="line"> </string>
    <string name="hint">随便说点什么吧</string>
    <string name="OK">确定</string>
    <string name="Cancel">取消</string>
    <string name="main2title">素材夹</string>
    <string name="main1name">素材库</string>

    <string name="edit_btn">编辑</string>

    <string name="menu_settings">Settings</string>
    <string name="hint_number">请输入账号</string>
    <string name="hint_phonenumber">请输入手机号</string>
    <string name="hint_yzm">请输入验证码</string>
    <string name="hint_password">请输入密码6~20位</string>
    <string name="hint_newpassword">请输入新密码</string>
    <string name="getword">发送验证码</string>
    <string name="login">登录</string>
    <string name="ljzhuce">立即注册</string>
    <string name="zhuce">注册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="string">已有密码，点击</string>
    <string name="zhaohuimima">找回密码</string>
    <string name="queren">确认</string>
</resources>
