<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/main_btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back_black"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/main_btn_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="135dp"
            android:layout_marginLeft="135dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="20sp"/>
    </LinearLayout>
    <TextView
        style="@style/line" />
    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="103dp"
        android:background="@drawable/shap"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/main_iv_account"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/login_account"
                android:layout_marginTop="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:scaleType="fitCenter" />

            <EditText
                android:id="@+id/main_et_number"
                android:layout_marginTop="1dp"
                android:layout_marginRight="2dp"
                android:layout_width="250dp"
                android:layout_height="51dp"
                android:textSize="15sp"
                android:hint="@string/hint_phonenumber"
                android:background="@color/white"
                />

        </LinearLayout>
        <TextView
            style="@style/line"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/main_iv_password"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/login_password"
                android:scaleType="fitCenter"
                />
            <EditText
                android:id="@+id/main_et_password"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginBottom="1dp"
                android:textSize="15sp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/main_btn_login"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/result"

        />
    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/main_btn_ljzhuce"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:text="@string/ljzhuce"
            android:textSize="15sp"
            android:background="@drawable/result2"/>
        <Button
            android:id="@+id/main_btn_wjmima"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginLeft="130dp"
            android:text="@string/forgetpassword"
            android:textSize="15sp"
            android:background="@drawable/result2"/>


    </LinearLayout>
</LinearLayout>
