<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activitymain_rl_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_gray_dark"
        android:foregroundGravity="center_horizontal"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/titlebar_ll_backBTN"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:clickable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@drawable/back_btn_white" />
        </RelativeLayout>

        <TextView
            android:id="@+id/activitymain_tv_title"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/main1name"
            android:textColor="@color/color_white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/activitymain_tv_editTitle"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/edit_btn"
            android:textColor="@color/color_white"
            android:textSize="30sp"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <com.google.lesson.Gallery.CustomRefreshListView
        android:id="@+id/listview_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:cacheColorHint="#00000000"
        android:divider="@color/color_gray_light"
        android:dividerHeight="0px"
        android:fadingEdge="none"
        android:footerDividersEnabled="true"
        android:layout_below="@id/activitymain_rl_title"
        android:listSelector="#00000000"></com.google.lesson.Gallery.CustomRefreshListView>

    <TextView
        android:id="@+id/tV_noUse_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listview_main"
        android:layout_centerHorizontal="true"
        android:lines="1"
        android:text="@string/line"
        android:textSize="18dp" />

    <!--<ImageView-->
        <!--android:id="@+id/iV_backMain_main"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/refresh_73_light"-->
        <!--android:visibility="invisible"/>-->

    <ImageButton
        android:id="@+id/iV_addGallery_main"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="85dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/shape_main_addbtn"
        android:src="@drawable/plus_sign" />

</RelativeLayout>